--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
     "displayName": "Reflectology Code Visualizer",
     "description": "Generates intricate diagrams from codebases using reflectology principles",
     "version": "0.1.0",
+    "publisher": "your-publisher-name",
     "engines": {
-        "vscode": "^1.60.0"
+        "vscode": "^1.80.0"
     },
     "categories": [
         "Visualization",
         "Other"
     ],
     "activationEvents": [
-        "onCommand:reflectologyVisualizer.generateDiagram",
-        "onCommand:reflectologyVisualizer.visualizeAnyCode",
-        "onView:reflectologyEntities",
-        "onView:reflectologyMetrics"
     ],
     "main": "./dist/extension.js",
     "contributes": {
@@ -77,9 +74,9 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/node": "^14.0.0",
+        "@types/node": "^20.0.0",
         "@types/vscode": "^1.60.0",
-        "typescript": "^4.4.3"
+        "typescript": "^5.0.0"
     },
     "dependencies": {
         "d3": "^7.6.1"
