pics# Update resources and package files

--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
                 {
                     "id": "reflectology",
                     "title": "Reflectology",
-                    "icon": "resources/icon.svg"
+                    "icon": "resources/mower.svg"
                 }
             ],
             "panel": [
                 {
                     "id": "reflectologyPanel",
                     "title": "Reflectology",
-                    "icon": "resources/icon.svg"
+                    "icon": "resources/mower.svg"
                 }
             ]
         },
