--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
     "name": "m0wer-visualizer",
     "displayName": "m0wer Code Visualizer",
     "description": "Generates intricate diagrams from codebases using M0WER principles",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "publisher": "M0WER.com",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Reflectology/M0WER"},
     "engines": {
         "vscode": "^1.80.0"
     },
